[package]
authors = ["PARK Youngho"]
name = "qrate"
version = "0.6.0"
edition = "2024"
keywords = ["quiz", "bank", "examination", "question", "teacher"]
categories = ["algorithms", "data-structures", "database"]
description = "A examination generator library that generates different quiz sets for all students so that each student may have a different quiz set from the quiz sets of the others."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/piaoyh/qrate"

[dependencies]
cryptocol = "0.19"
rusqlite = { version = "0.39", features = ["bundled"] }
rust_xlsxwriter = "0.94"
calamine = "0.34"
docx-rs = "0.4"
genpdfi = "0.2.7"

[profile.dev]
incremental = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc"
]

[patch.crates-io]
genpdfi = { path = "vendor/genpdfi" }
printpdf = { path = "vendor/printpdf" }


[[example]]
name = "conversion"
path = "examples/conversion.rs"

[[example]]
name = "prep"
path = "examples/prep.rs"

[[example]]
name = "store"
path = "examples/store.rs"
